src/test/ui/traits/bad-trait-error-span-in-call.stderr
error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:59:60
   |
LL |     want(Wrapper { value: Burrito { spicy: false, filling: q } });
   |     ---- required by a bound introduced by this call       ^ the trait `T3` is not implemented for `Q`
   |
note: required for `Burrito<Q>` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:22:13
   |
LL | impl<A: T3> T2 for Burrito<A> {}
   |             ^^     ^^^^^^^^^^
note: required for `Wrapper<Burrito<Q>>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:63:84
   |
LL |     want(Wrapper { value: BurritoKinds::SmallBurrito { spicy: true, small_filling: q } });
   |     ---- required by a bound introduced by this call                               ^ the trait `T3` is not implemented for `Q`
   |
note: required for `BurritoKinds<Q>` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:32:13
   |
LL | impl<D: T3> T2 for BurritoKinds<D> {}
   |             ^^     ^^^^^^^^^^^^^^^
note: required for `Wrapper<BurritoKinds<Q>>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:67:39
   |
LL |     want(Wrapper { value: Taco(false, q) });
   |     ----                              ^ the trait `T3` is not implemented for `Q`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `Taco<Q>` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:35:13
   |
LL | impl<E: T3> T2 for Taco<E> {}
   |             ^^     ^^^^^^^
note: required for `Wrapper<Taco<Q>>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:71:53
   |
LL |     want(Wrapper { value: TacoKinds::OneTaco(false, q) });
   |     ----                                            ^ the trait `T3` is not implemented for `Q`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `TacoKinds<Q>` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:41:13
   |
LL | impl<F: T3> T2 for TacoKinds<F> {}
   |             ^^     ^^^^^^^^^^^^
note: required for `Wrapper<TacoKinds<Q>>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:75:74
   |
LL |     want(Wrapper { value: GenericBurrito { spiciness: NotSpicy, filling: q } });
   |     ---- required by a bound introduced by this call                     ^ the trait `T3` is not implemented for `Q`
   |
note: required for `GenericBurrito<NotSpicy, Q>` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:47:16
   |
LL | impl<X, Y: T3> T2 for GenericBurrito<X, Y> {}
   |                ^^     ^^^^^^^^^^^^^^^^^^^^
note: required for `Wrapper<GenericBurrito<NotSpicy, Q>>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error[E0277]: the trait bound `Q: T3` is not satisfied
  --> $DIR/bad-trait-error-span-in-call.rs:79:31
   |
LL |     want(Wrapper { value: (3, q) });
   |     ----                      ^ the trait `T3` is not implemented for `Q`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `(i32, Q)` to implement `T2`
  --> $DIR/bad-trait-error-span-in-call.rs:50:20
   |
LL | impl<A: T3, B: T3> T2 for (A, B) {}
   |                    ^^     ^^^^^^
note: required for `Wrapper<(i32, Q)>` to implement `T1`
  --> $DIR/bad-trait-error-span-in-call.rs:16:13
   |
LL | impl<B: T2> T1 for Wrapper<B> {}
   |             ^^     ^^^^^^^^^^
note: required by a bound in `want`
  --> $DIR/bad-trait-error-span-in-call.rs:52:12
   |
LL | fn want<V: T1>(_x: V) {}
   |            ^^ required by this bound in `want`
help: consider restricting type parameter `Q`
   |
LL | fn example<Q: T3>(q: Q) {
   |             ++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
